# atmaCup-10

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
notebook/analysis/: 001_eda.ipynb  002_color_palette.ipynb
notebook/exp/: exp_001.ipynb  exp_002.ipynb  exp_003.ipynb
notebook/exp/wandb/: latest-run
notebook/exp/wandb/run-20210324_223620-11zmib1k/: run-11zmib1k.wandb
notebook/exp/wandb/run-20210324_223620-11zmib1k/files/: config.yaml  requirements.txt  wandb-metadata.json
notebook/exp/wandb/run-20210325_231854-3ef0w7hp/: run-3ef0w7hp.wandb
notebook/exp/wandb/run-20210325_231854-3ef0w7hp/files/: config.yaml  wandb-metadata.json
src/: feature.py  utils.py
