[tool.poetry]
name = "atmacup-10"
version = "0.1.0"
description = ""
authors = ["azupero_adolph <azupero.adolph@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.20.1"
pandas = "^1.2.3"
scipy = "^1.6.2"
matplotlib = "^3.4.0"
seaborn = "^0.11.1"
plotly = "^4.14.3"
jupyterlab = "^3.0.12"
scikit-learn = "^0.24.1"
tqdm = "^4.59.0"
xgboost = "^1.3.3"
lightgbm = "^3.2.0"
catboost = "^0.25"
wandb = "^0.10.23"
optuna = "2.5"
sweetviz = "^2.0.9"
ptitprince = "^0.2.5"
category-encoders = "^2.2.2"
xfeat = "^0.1.1"
matplotlib-venn = "^0.11.6"
texthero = "1.0.8"
gensim = "^4.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
